--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "underscore" : "1.4.x",
     "mongoose" :  "3.5.x",
     "xml2json" :  "0.3.x",
+    "jsontoxml" : "0.0.x",
     "xmldom"   :  "0.1.x",
     "flatiron" :  "0.3.x",
     "flatiron-cli-config" : "0.1.x",
