--- a/package.json
+++ b/package.json
@@ -65,10 +65,11 @@
     "xmldom": "0.1.x"
   },
   "devDependencies": {
+    "chai": "^3.4.1",
     "coffee-script": "~1.8.0",
     "jsonpath-plus": "^0.14.0",
     "markdown": "0.5.x",
-    "mocha": "2.3.4"
+    "mocha": "2.4.4"
   },
   "bugs": {
     "email": "seaton@hum.ku.dk",
