--- a/package.json
+++ b/package.json
@@ -46,17 +46,17 @@
   },
   "main": "./lib/updater-cli.js",
   "engines": {
-    "node": ">= 0.6||>=0.8"
+    "node": ">=0.12"
   },
   "dependencies": {
     "cli-table": "0.2.x",
-    "colors": "0.6.x",
-    "flatiron": "0.3.x",
+    "colors": "^1.1.x",
+    "flatiron": "^0.4.0",
     "flatiron-cli-config": "0.1.x",
     "jsontoxml": "0.0.x",
-    "mongoose": "3.5.x",
+    "mongoose": "^3.7.x",
     "pkginfo": "0.3",
-    "prettyjson": "0.8.x",
+    "prettyjson": "^1.1.0",
     "prompt": "0.2.x",
     "request": "^2.67.0",
     "request-promise": "^2.0.0",
@@ -66,6 +66,7 @@
   },
   "devDependencies": {
     "chai": "^3.4.1",
+    "chai-as-promised": "^5.2.0",
     "coffee-script": "~1.8.0",
     "jsonpath-plus": "^0.14.0",
     "markdown": "0.5.x",
