--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "xmldom": "0.1.x"
   },
   "devDependencies": {
+    "async": "^1.5.2",
     "chai": "^3.4.1",
     "chai-as-promised": "^5.2.0",
     "coffee-script": "~1.8.0",
