Replace node-xml2json with node-xml2js for bi-directional XML/JSON parsing.

--- a/data/config.json
+++ b/data/config.json
@@ -1,11 +1,11 @@
 {
     "directories": {},
-    "escidoc_handle": "ESCIDOC-YLuFIjdd2T1370600399272",
-    "mongoose_auth": "mongodb://localhost/metadata_test",
+    "escidoc_handle": "ESCIDOC-XrcA3WCAJm1501034328818",
+    "mongoose_auth": "mongodb://localhost/clarindk_metadata_test",
     "targetUrl": "http://devtools.clarin.dk",
     "targetQuery": "",
-    "updaterHost": "localhost",
-    "updaterPort": "8082",
+    "updaterHost": "devtools.clarin.dk",
+    "updaterPort": "80",
     "fullname": "Mitchell Seaton",
     "email": "seaton@hum.ku.dk",
     "colors": true,
