Fix batch config and debug log

--- a/config.json
+++ b/config.json
@@ -1,26 +1,27 @@
 {
-    "directories": {},
-    "escidoc_handle": "ESCIDOC-bkbrJJgej11501121550440",
-    "mongoose_auth": "mongodb://localhost/clarindk_metadata_test",
-    "targetUrl": "http://devtools.clarin.dk",
-    "targetQuery": "",
-    "updaterHost": "devtools.clarin.dk",
-    "updaterPort": "80",
-    "fullname": "Mitchell Seaton",
-    "email": "seaton@hum.ku.dk",
-    "colors": true,
-    "useBatch": false,
-    "batchLimit": "10",
-    "parserAttrkey": "$",
-    "parserCharkey": "_",
-    "parserExplicitArray": true,
-    "pidResolveService": "pidmanager",
-    "pidmanager_host": "devtools.clarin.dk",
-    "pidmanager_path": "/pidmanager/pid/handle/",
-    "pidmanager_auth_user": "clarindk",
-    "pidmanager_auth_pass": "password",
-    "pidmanager_prefix": "11221",
-    "handle_api_host": "hdl.handle.net",
-    "handle_api_path": "/api/handles/",
-    "handle_use_auth": true
+  "directories": {},
+  "escidoc_handle": "ESCIDOC-nwclPS6BP91501558086238",
+  "mongoose_auth": "mongodb://localhost/clarindk_metadata_olac",
+  "targetUrl": "http://devtools.clarin.dk",
+  "targetQuery": "",
+  "updaterHost": "devtools.clarin.dk",
+  "updaterPort": "80",
+  "fullname": "Mitchell Seaton",
+  "email": "seaton@hum.ku.dk",
+  "colors": true,
+  "useBatch": true,
+  "batchLimit": "5",
+  "parserAttrkey": "$",
+  "parserCharkey": "_",
+  "parserExplicitArray": true,
+  "pidResolveService": "pidmanager",
+  "pidmanager_host": "devtools.clarin.dk",
+  "pidmanager_path": "/pidmanager/pid/handle/",
+  "pidmanager_auth_user": "clarindk",
+  "pidmanager_auth_pass": "password",
+  "pidmanager_prefix": "11221",
+  "handle_api_host": "hdl.handle.net",
+  "handle_api_path": "/api/handles/",
+  "handle_use_auth": true,
+  "debug": true
 }
